src/test/ui/suggestions/type-ascription-instead-of-method.rs
fn main() {
    Box:new("foo".to_string())
    //~^ ERROR expected type, found
}
